# jetbot-foundation-model-skills

./: .clang-format  .gitignore  Dockerfile  launch.sh  ost.yaml
.devcontainer/: devcontainer.json  docker-compose.override.yml
camera_handler/: package.xml
motor_driver/: CMakeLists.txt  package.xml
src/camera_handler/: CMakeLists.txt  package.xml
src/camera_handler/include/camera_handler/: CameraHandlerNode.hpp
src/camera_handler/src/: CMakeLists.txt  main.cpp
src/image_rectifier/: CMakeLists.txt  README.md  package.xml
src/image_rectifier/include/image_rectifier/: image_rectifier_node.hpp
src/image_rectifier/launch/: image_rectifier.launch.py
src/image_rectifier/src/: image_rectifier_node.cpp  main.cpp
src/jetbot_bringup/: CMakeLists.txt  package.xml
src/jetbot_bringup/launch/: jetson_bringup.launch.py
src/jetbot_motors/: CMakeLists.txt  package.xml
src/jetbot_motors/action/: DriveDistance.action  TurnAngle.action
src/jetbot_motors/include/jetbot_motors/: MotorNode.hpp  Pca9685.hpp  Pca9865.hpp
src/jetbot_motors/launch/: motor.launch.py
src/jetbot_motors/src/: MotorNode.cpp  Pca9685.cpp  Pca9865.cpp  main.cpp
src/motor_driver/: CMakeLists.txt
src/motor_driver/include/motor_driver/: MotorDriverNode.hpp  Pca9685.hpp  Pca9865.hpp  Tb6612.hpp
src/motor_driver/src/: MotorDriverNode.cpp  Pca9685.cpp  Pca9865.cpp  Tb6612.cpp  main.cpp
src/praxis_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/praxis_ros/praxis_ros/: praxis_cli_node.py  skill_node.py
src/praxis_ros/srv/: ExecuteSkill.srv  GenerateSkill.srv
